Añadidas todas las partes del documento, bibliografia, escrito brief,  parte de la introduccion y seccion 2.1 goals

--- a/2-general_description.tex
+++ b/2-general_description.tex
@@ -1,4 +1,4 @@
-\section{General Description}
+\chapter{General Description}
 \input{2.1-goals.tex}
 \input{2.2-prior_work.tex}
 \input{2.3-the_problem.tex}
