--- a/3-design_and_specifications.tex
+++ b/3-design_and_specifications.tex
@@ -1,2 +1,4 @@
-\section{Design and Specifications}
+\chapter{Design and Specifications}
 \input{3.1-the_problem_definition.tex}
+\input{3.2-specifications.tex}
+\input{3.3-restrictions.tex}
