--- a/thesis.tex
+++ b/thesis.tex
@@ -1,35 +1,29 @@
-\documentclass[12pt]{report}
+\documentclass[12pt]{book}
 \usepackage[utf8]{inputenc}
 \usepackage{ifpdf}
 \usepackage{graphicx}
+\usepackage{phdthesis}
+\usepackage{title_page_pacho}
+
 \linespread{1.3}
-\setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
+
 
 \title{3D Annotations in Immersive Environments}
-\author{Francisco J. Pinzón L.\\
-	\\
-		Ingenieria de Sistemas y Computación\\
-		Departamento de Ingienería de Sistemas y Computación\\
-		Universidad de los Andes. Bogotá, Colombia.\\
-	\\
-		Institut Image. Chalon-sur-Saône, France.\\
-		École Superieur d'Arts et Mettiers\\}
-\ifpdf
-	\pdfinfo {
-		/Author (Francisco J. Pinzón L\breve{Text} 200711428)
-		/Title (Thesis)
-		/Subject (SUBJECT)
-		/Keywords (KEYWORDS)
-		/CreationDate (D:20100505)
-	}
-\fi
+\author{Francisco J. Pinzón L.}
+\date{July 2011}
 
 \begin{document}
 \maketitle
+\setcounter{chapter}{-1}
+
 \input{0-brief.tex}
 \input{1-introduction.tex}
 \input{2-general_description.tex}
 \input{3-design_and_specifications.tex}
-
-
+\input{4-design-process.tex}
+\input{5-implementation.tex}
+\input{6-validation.tex}
+\input{7-conclusions.tex}
+\bibliographystyle{acm}
+\bibliography{thesis}
 \end{document}
