--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -7,19 +7,33 @@
 %Estructura del documento (cómo leerlo y seguirlo).%
 %Reconocimieentos / Agradecimientos (si son necesarios).%
 %
-\section{Introduction}
+\begin{savequote}[10pc]
+\sffamily
+Smoke whirls\\
+After the passage of a train.\\
+Young foliage.
+\qauthor{Shiki Masaoka (1867-1902)}
+\end{savequote}
+\chapter{Introduction}
 %Motivación.%
 For a long time now I've wanted to visit France. Actually, thinking about it, I had that desire before I started to study Systems and Computer Engineering at Universidad de los Andes. Someday I just asked Tiberio about the possibilities of making my thesis abroad. He gave me certain options and one of them was the Institut Image at Chalon-sur-Saône (in which I am writing this Introduction). Since then a few months passed before the bureaucratic nightmare started. 
 
 From the university demanding information they already had, and for which I had to pay a considerable amount of money; to the French Embassy and their Kafkesque process to give me a 5 minutes appointment after weeks of collecting innumerable documents, without taking in account my travel to Brazil to participate in Interactivos? 2010 BH, Christmas and New Year's eve, I thought I wouldn't be able to fly to France in time.  After all it actually happened.
 
-The subject of this work was given to me by Frédéric two weeks after my arrival at Chalon. In normal conditions I prefer my projects to be product of my ideas and not someone else's, but the opportunity to come here for a whole semester easily took over that. Looking backwards, this project has been a great learning opportunity, both personal and professionally.
+The subject of this work was given to me by Frédéric two weeks after my arrival at Chalon. In standard circumstances I prefer my projects to be product of my ideas and not someone else's, but the opportunity to come here for a whole semester easily took over that. Looking backwards, this project has been a great learning opportunity, both personal and professionally.
 
 %Enunciado del problema. Discusión de lo que debería ser una solución.$
 
 The instructions for developing my project were simple and precise: A system for making annotations on 3D models using the cave facilities present at the institute, however usable in a standard computer. The idea is to be able to comment collaboratively and in distant locations a 3D model. The annotations would be simply a plain text comment, with an author and a priority attached. 
 
-%Diseño e impolementación.%
+So, as you can see, rather than the traditional way to choosing a thesis I was given a determinate topic and a narrow and precise expected solution. For this reason, in this project, I will work on the possibilities, contexts in which it might be used, constraints and potential scopes of the given solution.
+
+%Diseño e implementación.%
+Some of the basic design choices of the solution were given by the facilities present at the Institute. Windows XP running in the cave computers, infrared tracking cameras, passive stereo projections and the Android powered tablet are some examples of these design choices. The software was developed using Microsoft Visual C++ for the software running in the servers and the Eclipse IDE for the tablet application; thus C++ and Java were used to build the solution. OpenSceneGraph and VRPN were also used.
+
+
+
+Aca falta \textbf{Diseño e implementación, Resultados obtenidos. Estructura del documento (cómo leerlo y seguirlo)}
 
 %Resultados obtenidos.%
 
