--- a/3.1-the_problem_definition.tex
+++ b/3.1-the_problem_definition.tex
@@ -1,3 +1,3 @@
 %3.1 	Definición del problema 
 %Escribir una definición clara del problema.%
-\subsection{The Problem's Definition}
+\section{The Problem's Definition}
