Added references, 2.2 prior work, 2.3 problem

--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,13 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for francisco at 2011-05-16 05:10:49 +0200 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
 Referencias:
 
 Kadobayashi'05: Mismo sistema utilizando croquet.
@@ -6,128 +16,138 @@ Duval, Annotation of Scientific data: Comment de paradigma de interacción. Uso 
 Sonnet:Reglas de display de las anotaciones. Forma de navegar el espacio. Formas de aislar las secciones importantes del modelo. Formas muy complejas y poco eficientes (automatizadas) de comentar un objeto! Anotaciones con formas extrañas. Para que?
 100 Design..: Pareto Principle
 
+@inproceedings{Burton,
+	Author = {Burton N, Kilgour A C , Taylor H},
+	Booktitle = {Proceedings of From Desk-Top to Web-Top: Virtual Environments on the Internet, World Wide Web and Networks},
+	Date-Added = {2011-05-16 05:09:17 +0200},
+	Date-Modified = {2011-05-16 05:10:40 +0200},
+	Pages = {1-24},
+	Title = {A Case Study in the Use of VRML 2.0 for Marketing a Product},
+	Year = {1997}}
+
+@inproceedings{Bernheim,
+	Author = {Bernheim Brush A.J., Bargeron D., Gupta A., Cadiz JJ},
+	Booktitle = {Proceedings of the SIG-CHI Conference on Human Factors in Computing Systems},
+	Date-Added = {2011-05-16 05:06:40 +0200},
+	Date-Modified = {2011-05-16 05:09:00 +0200},
+	Pages = {285-292},
+	Title = {Robust Annotation Positioning in Digital Documents},
+	Year = {2001}}
+
 @inproceedings{Kadobayashi,
- author = {Kadobayashi, Rieko and Lombardi, Julian and McCahill, Mark P. and Stearns, Howard and Tanaka, Katsumi and Kay, Alan},
- title = {Annotation authoring in collaborative 3D virtual environments},
- booktitle = {Proceedings of the 2005 international conference on Augmented tele-existence},
- series = {ICAT '05},
- year = {2005},
- isbn = {0-473-10657-4},
- location = {Christchurch, New Zealand},
- pages = {255--256},
- numpages = {2},
- url = {http://doi.acm.org/10.1145/1152399.1152452},
- doi = {http://doi.acm.org/10.1145/1152399.1152452},
- acmid = {1152452},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {3D user interface, croquet, virtual reality},
-}
+	Acmid = {1152452},
+	Address = {New York, NY, USA},
+	Author = {Kadobayashi, Rieko and Lombardi, Julian and McCahill, Mark P. and Stearns, Howard and Tanaka, Katsumi and Kay, Alan},
+	Booktitle = {Proceedings of the 2005 international conference on Augmented tele-existence},
+	Doi = {http://doi.acm.org/10.1145/1152399.1152452},
+	Isbn = {0-473-10657-4},
+	Keywords = {3D user interface, croquet, virtual reality},
+	Location = {Christchurch, New Zealand},
+	Numpages = {2},
+	Pages = {255--256},
+	Publisher = {ACM},
+	Series = {ICAT '05},
+	Title = {Annotation authoring in collaborative 3D virtual environments},
+	Url = {http://doi.acm.org/10.1145/1152399.1152452},
+	Year = {2005},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1152399.1152452}}
 
 @inproceedings{Sonnet,
- author = {Sonnet, Henry and Carpendale, Sheelagh and Strothotte, Thomas},
- title = {Integrating expanding annotations with a 3D explosion probe},
- booktitle = {Proceedings of the working conference on Advanced visual interfaces},
- series = {AVI '04},
- year = {2004},
- isbn = {1-58113-867-9},
- location = {Gallipoli, Italy},
- pages = {63--70},
- numpages = {8},
- url = {http://doi.acm.org/10.1145/989863.989871},
- doi = {http://doi.acm.org/10.1145/989863.989871},
- acmid = {989871},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {3D model exploration, expanding annotations, explosion diagram, interaction design},
-} 
+	Acmid = {989871},
+	Address = {New York, NY, USA},
+	Author = {Sonnet, Henry and Carpendale, Sheelagh and Strothotte, Thomas},
+	Booktitle = {Proceedings of the working conference on Advanced visual interfaces},
+	Doi = {http://doi.acm.org/10.1145/989863.989871},
+	Isbn = {1-58113-867-9},
+	Keywords = {3D model exploration, expanding annotations, explosion diagram, interaction design},
+	Location = {Gallipoli, Italy},
+	Numpages = {8},
+	Pages = {63--70},
+	Publisher = {ACM},
+	Series = {AVI '04},
+	Title = {Integrating expanding annotations with a 3D explosion probe},
+	Url = {http://doi.acm.org/10.1145/989863.989871},
+	Year = {2004},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/989863.989871}}
 
 @inproceedings{Jung,
- author = {Jung, Thomas and Gross, Mark D. and Do, Ellen Yi-Luen},
- title = {Annotating and sketching on 3D web models},
- booktitle = {Proceedings of the 7th international conference on Intelligent user interfaces},
- series = {IUI '02},
- year = {2002},
- isbn = {1-58113-459-2},
- location = {San Francisco, California, USA},
- pages = {95--102},
- numpages = {8},
- url = {http://doi.acm.org/10.1145/502716.502733},
- doi = {http://doi.acm.org/10.1145/502716.502733},
- acmid = {502733},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {3D models, Java 3D, VRML, annotation, collaboration, gesture recognition, pen-based interface, sketch in 3D},
-} 
+	Acmid = {502733},
+	Address = {New York, NY, USA},
+	Author = {Jung, Thomas and Gross, Mark D. and Do, Ellen Yi-Luen},
+	Booktitle = {Proceedings of the 7th international conference on Intelligent user interfaces},
+	Doi = {http://doi.acm.org/10.1145/502716.502733},
+	Isbn = {1-58113-459-2},
+	Keywords = {3D models, Java 3D, VRML, annotation, collaboration, gesture recognition, pen-based interface, sketch in 3D},
+	Location = {San Francisco, California, USA},
+	Numpages = {8},
+	Pages = {95--102},
+	Publisher = {ACM},
+	Series = {IUI '02},
+	Title = {Annotating and sketching on 3D web models},
+	Url = {http://doi.acm.org/10.1145/502716.502733},
+	Year = {2002},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/502716.502733}}
 
 @inproceedings{Goncalves,
- author = {Gon\c{c}alves, Duarte and Jesus, Rui and Grangeiro, Filipe and Rom\~{a}o, Teresa and Correia, Nuno},
- title = {Tag around: a 3D gesture game for image annotation},
- booktitle = {Proceedings of the 2008 International Conference on Advances in Computer Entertainment Technology},
- series = {ACE '08},
- year = {2008},
- isbn = {978-1-60558-393-8},
- location = {Yokohama, Japan},
- pages = {259--262},
- numpages = {4},
- url = {http://doi.acm.org/10.1145/1501750.1501811},
- doi = {http://doi.acm.org/10.1145/1501750.1501811},
- acmid = {1501811},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {computer games, gesture based interface, image annotation},
-}
+	Acmid = {1501811},
+	Address = {New York, NY, USA},
+	Author = {Gon\c{c}alves, Duarte and Jesus, Rui and Grangeiro, Filipe and Rom\~{a}o, Teresa and Correia, Nuno},
+	Booktitle = {Proceedings of the 2008 International Conference on Advances in Computer Entertainment Technology},
+	Doi = {http://doi.acm.org/10.1145/1501750.1501811},
+	Isbn = {978-1-60558-393-8},
+	Keywords = {computer games, gesture based interface, image annotation},
+	Location = {Yokohama, Japan},
+	Numpages = {4},
+	Pages = {259--262},
+	Publisher = {ACM},
+	Series = {ACE '08},
+	Title = {Tag around: a 3D gesture game for image annotation},
+	Url = {http://doi.acm.org/10.1145/1501750.1501811},
+	Year = {2008},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1501750.1501811}}
 
 @inproceedings{Duval,
- author = {Duval, Thierry and Fleury, C\'{e}dric and Nouailhas, Bernard and Aguerreche, Laurent},
- title = {Collaborative exploration of 3D scientific data},
- booktitle = {Proceedings of the 2008 ACM symposium on Virtual reality software and technology},
- series = {VRST '08},
- year = {2008},
- isbn = {978-1-59593-951-7},
- location = {Bordeaux, France},
- pages = {303--304},
- numpages = {2},
- url = {http://doi.acm.org/10.1145/1450579.1450664},
- doi = {http://doi.acm.org/10.1145/1450579.1450664},
- acmid = {1450664},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {3D interaction, 3D scientific visualization, collaborative virtual environments},
-}
+	Acmid = {1450664},
+	Address = {New York, NY, USA},
+	Author = {Duval, Thierry and Fleury, C\'{e}dric and Nouailhas, Bernard and Aguerreche, Laurent},
+	Booktitle = {Proceedings of the 2008 ACM symposium on Virtual reality software and technology},
+	Doi = {http://doi.acm.org/10.1145/1450579.1450664},
+	Isbn = {978-1-59593-951-7},
+	Keywords = {3D interaction, 3D scientific visualization, collaborative virtual environments},
+	Location = {Bordeaux, France},
+	Numpages = {2},
+	Pages = {303--304},
+	Publisher = {ACM},
+	Series = {VRST '08},
+	Title = {Collaborative exploration of 3D scientific data},
+	Url = {http://doi.acm.org/10.1145/1450579.1450664},
+	Year = {2008},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1450579.1450664}}
 
 @inproceedings{Hong,
- author = {Hong, Lichan and Chi, Ed H. and Card, Stuart K.},
- title = {Annotating 3D electronic books},
- booktitle = {CHI '05 extended abstracts on Human factors in computing systems},
- series = {CHI EA '05},
- year = {2005},
- isbn = {1-59593-002-7},
- location = {Portland, OR, USA},
- pages = {1463--1466},
- numpages = {4},
- url = {http://doi.acm.org/10.1145/1056808.1056942},
- doi = {http://doi.acm.org/10.1145/1056808.1056942},
- acmid = {1056942},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {3D book, annotation, digital library, user interface},
-}
+	Acmid = {1056942},
+	Address = {New York, NY, USA},
+	Author = {Hong, Lichan and Chi, Ed H. and Card, Stuart K.},
+	Booktitle = {CHI '05 extended abstracts on Human factors in computing systems},
+	Doi = {http://doi.acm.org/10.1145/1056808.1056942},
+	Isbn = {1-59593-002-7},
+	Keywords = {3D book, annotation, digital library, user interface},
+	Location = {Portland, OR, USA},
+	Numpages = {4},
+	Pages = {1463--1466},
+	Publisher = {ACM},
+	Series = {CHI EA '05},
+	Title = {Annotating 3D electronic books},
+	Url = {http://doi.acm.org/10.1145/1056808.1056942},
+	Year = {2005},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1056808.1056942}}
 
 @book{lidwell2003universal,
-  title={{Universal principles of design: 100 ways to enhance usability, influence perception, increase appeal, make better design decisions, and teach through design}},
-  author={Lidwell, W. and Holden, K. and Butler, J.},
-  isbn={9781592530076},
-  lccn={2003009384},
-  url={http://books.google.com/books?id=e4AaWB3QX6cC},
-  year={2003},
-  publisher={Rockport}
-}
-
-F. Ritter, H. Sonnet, K. Hartmann, and T. Strothotte. Illustrative Shadows: Integrating 3D and 2D Information Displays. In Proceedings of 2003 International Conference on Intelligent User Interfaces, pages 166–173. ACM Press, 2003.
-
-B. Bell, S. Feiner, and T. H ̈ollerer. View Management for Virtual and Augmented Reality. In Proceedings of the 14th Annual ACM Symposium on User Interface Software and Technology, pages 101–110. ACM Press, 2001.
-
-J.-D. Fekete and C. Plaisant. Excentric Labeling: Dynamic Neighborhood Labeling for Data Visualization. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems, pages 512–519. ACM Press, 1998.
-
-F. Ritter, H. Sonnet, K. Hartmann, and T. Strothotte. Illustrative Shadows: Integrating 3D and 2D Information Displays. In Proceedings of 2003 International Conference on Intelligent User Interfaces, pages 166–173. ACM Press, 2003.
+	Author = {Lidwell, W. and Holden, K. and Butler, J.},
+	Isbn = {9781592530076},
+	Lccn = {2003009384},
+	Publisher = {Rockport},
+	Title = {{Universal principles of design: 100 ways to enhance usability, influence perception, increase appeal, make better design decisions, and teach through design}},
+	Url = {http://books.google.com/books?id=e4AaWB3QX6cC},
+	Year = {2003},
+	Bdsk-Url-1 = {http://books.google.com/books?id=e4AaWB3QX6cC}}
