Redacted Specifications and Restrictions

--- a/0-brief.tex
+++ b/0-brief.tex
@@ -1,3 +1,3 @@
 %Resumen del trabajo desarrollado: motivación, el problema que se resuelve, los resultados obtenidos (aprox. 10 líneas).%
 \chapter{Brief}
-The requirement of a 3D Annotation System for Immersive Environments with telecooperation capabilities was a basic and unfulfilled need present at the Institute Image when I arrived. For this reason I was given the task of developing such system as my undergrad thesis. The use of the immersive facilities present at the Institute in the provided solution was a requirement, as well as keeping the compatibility with standard computers. The provided application succeed in the fulfillment of the original requirement. The following document describes this solution as well as the considerations taken in account for developing it.
+The requirement of a 3D Annotation System for Immersive Environments with telecooperation (not concurrent) capabilities was a basic and unfulfilled need present at the Institute Image when I arrived. For this reason I was given the task of developing such system as my undergrad thesis. The use of the immersive facilities present at the Institute in the provided solution was a requirement, as well as keeping the compatibility with standard computers. The provided application succeed in the fulfillment of the original requirement. The following document describes this solution as well as the considerations taken in account for developing it.
