--- a/2.1-goals.tex
+++ b/2.1-goals.tex
@@ -1,5 +1,5 @@
 %Describir el propósito y contexto del proyecto en uno o dos párrafos.%
 \section{Goals}
-The objective of the project is to create a 3D Annotation System for Immersive Environments with not concurrent tele-cooperation capabilities and which might be used in a standard computer. The projected is developed for fulfill the need of such system at the facilities of the Institut Image and at the COLIVRI Laboratory at the Universidad de los Andes; without being restricted to these two contexts.
+The objective of the project is to create a 3D Annotation System for Immersive Environments without concurrent tele-cooperation capabilities and which also might be used in a standard computer. The projected is developed for fulfill the need of such system at the facilities of the Institut Image and at the COLIVRI Laboratory at the Universidad de los Andes; without being restricted to these two contexts.
 
 The final solution must be capable of performing this task in models of a variety of 3D formats, associating with each annotation its type and urgency to be managed. On the other hand the system meet the ever-present needs of scalability, flexibility, performance and specially usability. The project must be developed using C++ and OpenSceneGraph and must run in Windows XP.
