--- a/2.3-the_problem.tex
+++ b/2.3-the_problem.tex
@@ -2,7 +2,7 @@
 %¿Cuál problema es el objeto del proyecto?
 %Describir el contexto del proyecto y el porqué de su importancia. Discutir tendencias actuales en ciencia / ingeniería relacionadas con el proyecto. Discutir, si es relevante, temática política relacionada, así como impacto global, económico, ambiental y social que una solución pudiera tener.%
 \section{The Problem}
-The root of the problem to resolve is the inherent complexity of 3D models. The need to reduce these inherent complexity and expand the models through the use of textual information is the primary concern that gave light to this project. Textual information of a general kind would serve to cast clarity and allow a deeper understanding of the modeled scene. As said in \cite{Kadobayashi} 'To be generally useful for collaborative research and learning, immersive virtual 3D spaces must include intuitive content creation and annotation tools'.
+The root of the problem is the inherent complexity of 3D models. The need to reduce these inherent complexity and expand the models through the use of textual information is the primary concern that gave light to this project. Textual information of a general kind would serve to cast clarity and allow a deeper understanding of the modeled scene. As said in \cite{Kadobayashi} `To be generally useful for collaborative research and learning, immersive virtual 3D spaces must include intuitive content creation and annotation tools'.
 
 The uses of such technology are rather diverse. From enabling educational experiences not possible before, to reducing the time to market via reducing the time to design in a diverse range of manufacturing companies; passing through semantically augmenting architectonic heritage, the potential uses are innumerable.
 
