--- a/3.1-the_problem_definition.tex
+++ b/3.1-the_problem_definition.tex
@@ -1,3 +1,11 @@
 %3.1 	Definición del problema 
 %Escribir una definición clara del problema.%
 \section{The Problem's Definition}
+
+Even thought in previous sections the problem to solve has been discussed considerably, this section focuses in provide a short and precise definition of it.
+
+This project proposes a solution to Annotate 3D models in a immersive cave-like system using an android tablet to interact with the scene. The part of the software that will be running in the cave servers and is aimed to render the scene will be developed using C++ and OpenSceneGraph. The part of the software that runs in the tablet will be developed using Java.
+
+The annotations must be saved using an XML archive, so it can be easily read by any other software. The annotations must show the information in the best displayable way, maximizing readability and relevance. This annotations must be textual comments with priority and author.
+
+The solution also must be able to run in a standard PC running Windows XP. 
