--- a/3.3-restrictions.tex
+++ b/3.3-restrictions.tex
@@ -1,3 +1,4 @@
 %3.3	Restricciones
 %Establecer restricciones para desarrollar o implementar una solución, incluyendo asuntos económicos, ambientales, sociales, políticos, éticos, legales, de salud, de seguridad, manufacturabilidad y mantenimiento. 
 \section{Restrictions}
+The most significant restrictions at the time of developing the project is, with complete certainty, both the inexperience of the author with the technologies used and the time to deliver it. There wasn't any other technological restriction which could affect the project. Given the nature of the project there weren't any economic, environmental, social, political, ethical, legal, health or security related restrictions \footnote{This remark is made taking into account the ABET directives for such documents.}.
