--- a/4.2-design-alternatives.tex
+++ b/4.2-design-alternatives.tex
@@ -1,3 +1,5 @@
 %4.2	Alternativas de diseño 
 %Describir alternativas de diseño consideradas y las razones usadas para elegir la alternativa finalmente escogida.
 \section{Design Alternatives}
+%Guante & Flystick & Voice Recognition
+%3D Joystick ->2D Joystick + Slider
