--- a/Doc Final/0-brief.tex
+++ b/Doc Final/0-brief.tex
@@ -1,3 +1,11 @@
 %Resumen del trabajo desarrollado: motivación, el problema que se resuelve, los resultados obtenidos (aprox. 10 líneas).%
+
+\begin{savequote}[10pc]
+\sffamily
+In Computer Science 0 is part of the natural numbers.
+\end{savequote}
+
+
+If your app doesn't excite you, something's wrong. If you're only working on it in order to cash out, it will show. Likewise, if you feel passionately about your app, it will come through in the final product. People can read between the lines.
 \chapter{Brief}
 The requirement of a 3D Annotation System for Immersive Environments with telecooperation (not concurrent) capabilities was a basic and unfulfilled need present at the Institute Image when I arrived. For this reason I was given the task of developing such system as my undergrad thesis. The use of the immersive facilities present at the Institute in the provided solution was a requirement, as well as keeping the compatibility with standard computers. The provided application succeed in the fulfillment of the original requirement. The following document describes this solution as well as the considerations taken in account for developing it.
