--- a/Software/Annotations/res/values/strings.xml
+++ b/Software/Annotations/res/values/strings.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">3DAnnotations</string>
+    
+    
+    <string name="priorities_prompt">Select the priority</string>
+
+   	<string-array name="priorities">
+        <item>Low</item>
+        <item>Medium</item>
+        <item>High</item>
+    </string-array>
+    
 </resources>
